lab1/Test/L1-A-4-85.cmm
int vYplURh9LCZJ8w ( float NtmTdgAs , int g5q4x19JIOYh 
  [ 1727164661 ] [ 1040062577 ! ] ) {
  struct {
  }wPrKZbr ;
  struct TwfttsWByMu Bf1sOXjKf1kVSWVST , VpF [ 12117588 
    ] = y ;
}
int ( struct Hz0j KQ ) {
  if ( - TMyHWzDJcP6sUHgM == ex_XCxtbv < bmxqfN0 == 
    gjd < L >= zac3M >= dsL_HSDSth > iMs >= J <= P8pjOmLO2pGCJsObYDm 
    < <= fEcTP2MtZm != wjNZ34vH )   WTPR7 ;
else   bQrzAswYn25P6 ;

}
int gCeQLXgDoL7PW ( float M7x [ 408570245 ] [ 1520051471 
  ] , int W4EEEBnEmk ) {
  int uTbW9pl47YHq2w2dgL4L = YP7VKn3XV ;
  if ( rnIn_qOAZrpA7TOOvh_ )   BoTNGntf7iVVGYCH7 

  if ( zscNVDNI )   if ( tm_ )   if ( kQMcisFTKWZP_yf 
    )   Qo ;



}
struct {
}CrgfeL ( ) {
  struct eQ jbdQwXqs [ 891468523 ] [ 441778662 ] = 
    rmqiekFiP_IXZFv , bDuT ;
}
int VeHuAib8Lb [ 83610323 ] [ 2124564211 ] [ 1652986466 
  ] , FbQ1Ct4P25OK [ 867238069 ] [ 645098554 ] [ 2103731888 
  ] [ 1870773514 ] [ 1870379092 ] , 


;
